--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.20",
-    "@types/react": "^16.14.14",
-    "@types/react-dom": "^16.9.14",
+    "@tailwindcss/jit": "^0.1.18",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.5",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "firebase": "^8.10.0",
-    "postcss": "^7.0.36",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
-    "typescript": "~4.1.5"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8",
+    "typescript": "~4.4.2"
   },
   "scripts": {
     "start": "craco start",
