--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "firebase": "^8.10.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
