--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8",
     "typescript": "~4.4.2"
   },
