--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
+    "browser-image-compression": "^1.0.17",
     "firebase": "^8.10.0",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
