--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^9.8.6",
     "browser-image-compression": "^1.0.17",
     "firebase": "^8.10.0",
+    "firebase-tools": "^10.0.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
