--- a/package.json
+++ b/package.json
@@ -3,33 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.1.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.8.0",
-    "@tailwindcss/jit": "^0.1.18",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
-    "@types/react-redux": "^7.1.23",
-    "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^9.8.8",
+    "@types/node": "^20.14.11",
+    "@types/react": "^17.0.88",
+    "@types/react-dom": "^17.0.26",
+    "@types/react-redux": "^7.1.34",
+    "autoprefixer": "^10.4.20",
     "browser-image-compression": "^1.0.17",
-    "firebase": "^8.10.1",
-    "firebase-tools": "^10.4.0",
-    "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
+    "firebase": "^9.23.0",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.30.1",
+    "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.4.13",
     "typescript": "~4.6.2",
     "sass": "^1.80.0"
   },
@@ -55,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "firebase-tools": "^14.17.0"
   }
 }
